working through authorization issues on django spilling over to the front end

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 }
 
 .footer-menu {
-  margin: 50px 20px 20px 20px;
+  margin: 40px 20px 20px 20px;
 
 }
 
@@ -218,4 +218,9 @@
 
 .card-container {
   height: 500px;
+}
+
+#logout-div {
+  display: inline-block;
+  margin-top: 5px;
 }
